plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '6.11.0'
}

repositories {
    mavenCentral()
    maven {
        url 'https://s01.oss.sonatype.org/content/repositories/releases/'
    }
}

dependencies {
    api 'com.squareup.okhttp3:okhttp:5.2.1'
    api 'com.fasterxml.jackson.core:jackson-databind:2.18.6'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.18.6'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.6'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
}


sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(Javadoc) {
    failOnError false
    options.addStringOption('Xdoclint:none', '-quiet')
}

spotless {
    java {
        palantirJavaFormat()
    }
}


java {
    withSourcesJar()
    withJavadocJar()
}


group = 'dev.basis-theory'

version = '0.0.1'

jar {
    dependsOn(":generatePomFileForMavenPublication")
    archiveBaseName = "basis-theory-java-sdk"
}

sourcesJar {
    archiveBaseName = "basis-theory-java-sdk"
}

javadocJar {
    archiveBaseName = "basis-theory-java-sdk"
}

test {
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'dev.basis-theory'
            artifactId = 'basis-theory-java-sdk'
            version = '0.0.1'
            from components.java
            pom {
                licenses {
                    license {
                        name = 'APACHE-2.0'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/greathouse/java-sdk.git'
                    developerConnection = 'scm:git:git://github.com/greathouse/java-sdk.git'
                    url = 'https://github.com/greathouse/java-sdk'
                }
            }
        }
    }
    repositories {
        maven {
            url "$System.env.MAVEN_PUBLISH_REGISTRY_URL"
            credentials {
                username "$System.env.MAVEN_USERNAME"
                password "$System.env.MAVEN_PASSWORD"
            }
        }
    }
}

